--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: flex-start;
+  margin-left: 10px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+}
+
+input{
+  height: 30px;
+  width: 200px;
+  margin-bottom: 15px;
+}
+
+.buttons{
+  display: flex;
+  gap: 5px
+}
+
+.oper{
+  height: 30px;
+  background-color: #f5f3f3;
+  border: 1px solid #888888;
+  border-radius: 3px;
+}
+.oper:hover {
+  cursor: pointer;
+}
+
+.reset{
   color: white;
+  background-color: orangered;
+  border: 1px solid #888888;
+  border-radius: 3px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reset:hover {
+  cursor: pointer;
 }
